# VCMeshConv

./: .gitignore  CONTRIBUTING.md  INSTRUCTION.md  README.md  requirements.txt
GraphAutoEncoder/: config_train.config  graphAE_dataloader.py  graphAE_param_iso.py  graphVAESSW.py  graphVAE_train.py
GraphSampling/: CMakeLists.txt  main.cpp  mdSArray.h  meshCNN.h  meshLoader.h  meshPooler.h  meshPooler_visualizer.h
GraphSampling/cnpy/: cnpy.h
